2011-03-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/z80.h:
	  Solaris fix?

2011-03-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/ralloc2.cc,
	  src/z80/gen.c,
	  src/z80/gen.h,
	  src/z80/z80.h:
	  Code reorganization for a more accurate cost function.

2011-03-15 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/configure.in, debugger/mcs51/configure:
	  added C99_FLAG to CFLAGS and MAKEDEP for SunPro C compiler
	* debugger/mcs51/simi.c: include <sys/filio.h> in Solaris

2011-03-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/main.c,
	  src/z80/gen.h,
	  src/z80/ralloc2.cc,
	  src/z80/gen.c:
	  Code reorganization for a more accurate cost function.

2011-03-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c (pointerTypeToGPByte),
	* src/ds390/gen.c (genCast): ds390 function pointer is no CPOINTER

2011-03-14 Borut Razem <borut.razem AT gmail.com>

	* configure, configure.in: don't use C99_FLAG in CXXFLAGS
	  for SunPro C++ compiler

2011-03-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (processParms): fixed bug 2084206,
	  (getLeftResultType): return RESULT_TYPE_GPTR for generic pointers,
	  (decorateType, CAST): don't change function pointer to CPOINTER
	  when resulttype is generic pointer, necessary for varargs
	* support/regression/tests/bug2084206.c: new, added

2011-03-13 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCglobl.h: don't incude stdbool.h if compiled with c++

2011-03-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Preparations for rematerialization support in new allocator.
	* src/z80/ralloc.c:
	  Old register allocator cleanup.
	* src/z80/gen.c:
	  Code reorganization for a more accurate cost function.

2011-03-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  support/regression/tests/memory.c:
	  Completed fix for #3188357.

2011-03-07 Borut Razem <borut.razem AT gmail.com>
